--- a/appRestauranteWeb/WebContent/admin/puntodeventa/cliente.xhtml
+++ b/appRestauranteWeb/WebContent/admin/puntodeventa/cliente.xhtml
@@ -35,7 +35,9 @@
 				<p:menuitem value="Bodega" url="../inventario/bodega.xhtml" />
 				<p:menuitem value="Categorías de producto"
 					url="../inventario/categoriaproducto.xhtml" />
+					<p:menuitem value="Productos" url="../inventario/producto.xhtml" />
 				<p:menuitem value="Proveedores" url="../inventario/proveedor.xhtml" />
+				<p:menuitem value="Factura de Compra" url="../inventario/facturacompra.xhtml" />
 			</p:splitButton>
 			<p:splitButton value="Punto de Venta">
 				<p:menuitem value="Clientes" url="cliente.xhtml" />
