--- a/appRestauranteWeb/WebContent/admin/puntodeventa/plato.xhtml
+++ b/appRestauranteWeb/WebContent/admin/puntodeventa/plato.xhtml
@@ -35,16 +35,21 @@
 				<p:menuitem value="Bodega" url="../inventario/bodega.xhtml" />
 				<p:menuitem value="Categorías de producto"
 					url="../inventario/categoriaproducto.xhtml" />
+				<p:menuitem value="Productos" url="../inventario/producto.xhtml" />
 				<p:menuitem value="Proveedores" url="../inventario/proveedor.xhtml" />
+				<p:menuitem value="Factura de Compra"
+					url="../inventario/facturacompra.xhtml" />
 			</p:splitButton>
 			<p:splitButton value="Punto de Venta">
 				<p:menuitem value="Clientes" url="../puntodeventa/cliente.xhtml" />
-				<p:menuitem value="Facturas de Venta" url="../puntodeventa/facturaventa.xhtml" />
+				<p:menuitem value="Facturas de Venta"
+					url="../puntodeventa/facturaventa.xhtml" />
 				<p:menuitem value="Pedidos" url="../puntodeventa/pedido.xhtml" />
 				<p:menuitem value="Platos" url="../puntodeventa/plato.xhtml" />
 			</p:splitButton>
 			<p:splitButton value="Caja diaria">
-				<p:menuitem value="Tipo de Transacciones" url="../cajadiaria/tipotransaccion.xhtml" />
+				<p:menuitem value="Tipo de Transacciones"
+					url="../cajadiaria/tipotransaccion.xhtml" />
 			</p:splitButton>
 		</h:panelGrid>
 	</div>
