--- a/appRestauranteWeb/WebContent/bodeguero/inventario/bodega.xhtml
+++ b/appRestauranteWeb/WebContent/bodeguero/inventario/bodega.xhtml
@@ -36,6 +36,7 @@
 				<p:menuitem value="Categorías de producto"
 					url="categoriaproducto.xhtml" />
 				<p:menuitem value="Proveedores" url="proveedor.xhtml" />
+				<p:menuitem value="Factura de Compra" url="facturacompra.xhtml" />
 			</p:splitButton>
 		</h:panelGrid>
 	</div>
