--- a/appRestauranteWeb/WebContent/admin/inventario/categoriaproducto.xhtml
+++ b/appRestauranteWeb/WebContent/admin/inventario/categoriaproducto.xhtml
@@ -35,7 +35,9 @@
 				<p:menuitem value="Bodega" url="bodega.xhtml" />
 				<p:menuitem value="Categorías de producto"
 					url="categoriaproducto.xhtml" />
+					<p:menuitem value="Productos" url="producto.xhtml" />
 				<p:menuitem value="Proveedores" url="proveedor.xhtml" />
+				<p:menuitem value="Factura de Compra" url="facturacompra.xhtml" />
 			</p:splitButton>
 			<p:splitButton value="Punto de Venta">
 				<p:menuitem value="Clientes" url="../puntodeventa/cliente.xhtml" />
