--- a/appRestauranteWeb/WebContent/admin/inventario/producto.xhtml
+++ b/appRestauranteWeb/WebContent/admin/inventario/producto.xhtml
@@ -1,64 +1,89 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html"
-	  xmlns:p="http://primefaces.org/ui">
-
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:p="http://primefaces.org/ui">
+<f:metadata>
+	<f:event listener="#{controllerUsuario.actionComprobarLogin()}"
+		type="preRenderView"></f:event>
+</f:metadata>
 <h:head>
-	<title>Producto</title>
+	<title>Bodegas</title>
 </h:head>
-<body>
+<h:body>
 	<p:messages autoUpdate="true"></p:messages>
-	<h:outputText value="REY POLLO"
-		style="padding-left: 10px; font-weight: bold; font-size: 175%" />
+	<div>
+		<div align="left">
+			<h:outputText value="REY POLLO"
+				style="padding-left: 10px; font-weight: bold; font-size: 175%; float: left" />
+		</div>
+		<div align="right" style="float: right">
+			<h:form>
+				<p:commandLink action="#{controllerUsuario.actionSalir()}"
+					value="Cerrar sesión" style="text-align: right; font-size: 150%"></p:commandLink>
+			</h:form>
+		</div>
+	</div>
+	<br />
+	<br />
 	<p:separator />
 	<div align="center">
 		<br />
 		<h:panelGrid columns="3">
 			<p:splitButton value="Inventario">
-				<p:menuitem value="Producto" url="producto.xhtml" />
 				<p:menuitem value="Bodega" url="bodega.xhtml" />
 				<p:menuitem value="Categorías de producto"
 					url="categoriaproducto.xhtml" />
+					<p:menuitem value="Productos" url="producto.xhtml" />
 				<p:menuitem value="Proveedores" url="proveedor.xhtml" />
+				<p:menuitem value="Factura de Compra" url="facturacompra.xhtml" />
 			</p:splitButton>
 			<p:splitButton value="Punto de Venta">
-				<p:menuitem value="Clientes" url="../Punto de venta/cliente.xhtml" />
+				<p:menuitem value="Clientes" url="../puntodeventa/cliente.xhtml" />
 				<p:menuitem value="Facturas de Venta"
-					url="../Punto de venta/facturaventa.xhtml" />
-				<p:menuitem value="Pedidos" url="../Punto de venta/pedido.xhtml" />
-				<p:menuitem value="Platos" url="../Punto de venta/plato.xhtml" />
+					url="../puntodeventa/facturaventa.xhtml" />
+				<p:menuitem value="Pedidos" url="../puntodeventa/pedido.xhtml" />
+				<p:menuitem value="Platos" url="../puntodeventa/plato.xhtml" />
 			</p:splitButton>
 			<p:splitButton value="Caja diaria">
 				<p:menuitem value="Tipo de Transacciones"
-					url="../Caja diaria/tipotransaccion.xhtml" />
+					url="../cajadiaria/tipotransaccion.xhtml" />
 			</p:splitButton>
 		</h:panelGrid>
 	</div>
 	<br />
 	<br />
-	 <h:panelGrid columns="2">
+	<p:breadCrumb>
+		<p:menuitem value="Inventario" url="#" />
+		<p:menuitem value="Inventario" url="#" />
+		<p:menuitem value="Bodega" url="#" />
+	</p:breadCrumb>
+	<br />
+	<br />
+	<h:panelGrid columns="2">
 		<h:form id="form">
 			<p:panel header="Nuevo Producto">
 				<p:panelGrid columns="2">
-				<h:panelGroup>
-					<p:selectOneMenu value="#{controllerProducto.idcategoria}" style="width:191px" 
-					required="true" requiredMessage="Especifique la categoria">
-							<f:selectItem itemLabel="Seleccione la categoria        " itemValue=""
-								noSelectionOption="true" />
-							<f:selectItems value="#{controllerProducto.listaCategoriaSI}" />													
-						</p:selectOneMenu >
-					</h:panelGroup >	
-						<h:outputText value="IdCategoria:" />
-						<h:panelGroup>
-						<p:selectOneMenu value="#{controllerProducto.idbodega}" style="width:191px" 
-						required="true" requiredMessage="Especifique la bodega" >
+					<h:panelGroup>
+						<p:selectOneMenu value="#{controllerProducto.idcategoria}"
+							style="width:191px" required="true"
+							requiredMessage="Especifique la categoria">
+							<f:selectItem itemLabel="Seleccione la categoria        "
+								itemValue="" noSelectionOption="true" />
+							<f:selectItems value="#{controllerProducto.listaCategoriaSI}" />
+						</p:selectOneMenu>
+					</h:panelGroup>
+					<h:outputText value="IdCategoria:" />
+					<h:panelGroup>
+						<p:selectOneMenu value="#{controllerProducto.idbodega}"
+							style="width:191px" required="true"
+							requiredMessage="Especifique la bodega">
 							<f:selectItem itemLabel="Seleccione la bodega" itemValue=""
 								noSelectionOption="true" />
-							<f:selectItems  value="#{controllerProducto.listaProductoSI}" />													
-					</p:selectOneMenu>
-					</h:panelGroup >					
+							<f:selectItems value="#{controllerProducto.listaProductoSI}" />
+						</p:selectOneMenu>
+					</h:panelGroup>
 					<h:outputText value="Idbodega:" />
 					<p:inputText value="#{controllerProducto.nombreproducto}"
 						required="true" requiredMessage="Especifique el nombre" />
@@ -67,26 +92,28 @@
 						required="true" requiredMessage="Especifique la descripción" />
 					<h:outputText value="Descripcion: " />
 					<p:inputText value="#{controllerProducto.valorcompra}"
-					required="true" requiredMessage="Especifique el valor" />
+						required="true" requiredMessage="Especifique el valor" />
 					<h:outputText value="ValorCompra: " />
 					<p:inputText value="#{controllerProducto.valorventa}"
 						required="true" requiredMessage="Especifique el valor" />
-					<h:outputText value="ValorVenta: " /> 					
-					<p:inputText value="#{controllerProducto.stock}"
-						required="true" requiredMessage="Especifique el stock" />
-					<h:outputText value="Stock: " />									
-					<p:selectOneMenu value="#{controllerProducto.estado}" style="width:191px" 
-					required="true" requiredMessage="Especifique el estado">
-            			<f:selectItem itemLabel="Seleccione el estado " itemValue="" />
-            			<f:selectItem itemLabel="true" itemValue="true" />
-            			<f:selectItem itemLabel="false" itemValue="false" />            			
-       				 </p:selectOneMenu>				
-					<h:outputText value="Estado: " />										
-					<p:selectOneMenu value="#{controllerProducto.unidadmedida}" effect="fold" editable="true"
-					required="true" requiredMessage="Especifique la unidad">
-            			<f:selectItem itemLabel="Seleccione la unidad " itemValue="" />
-            			<f:selectItems value="#{controllerProducto.listaUnidadSI}" />
-        			</p:selectOneMenu>									
+					<h:outputText value="ValorVenta: " />
+					<p:inputText value="#{controllerProducto.stock}" required="true"
+						requiredMessage="Especifique el stock" />
+					<h:outputText value="Stock: " />
+					<p:selectOneMenu value="#{controllerProducto.estado}"
+						style="width:191px" required="true"
+						requiredMessage="Especifique el estado">
+						<f:selectItem itemLabel="Seleccione el estado " itemValue="" />
+						<f:selectItem itemLabel="true" itemValue="true" />
+						<f:selectItem itemLabel="false" itemValue="false" />
+					</p:selectOneMenu>
+					<h:outputText value="Estado: " />
+					<p:selectOneMenu value="#{controllerProducto.unidadmedida}"
+						effect="fold" editable="true" required="true"
+						requiredMessage="Especifique la unidad">
+						<f:selectItem itemLabel="Seleccione la unidad " itemValue="" />
+						<f:selectItems value="#{controllerProducto.listaUnidadSI}" />
+					</p:selectOneMenu>
 					<h:outputText value="Unidad de Medida: " />
 				</p:panelGrid>
 				<p:commandButton value="Agregar" icon="ui-icon-disk"
@@ -99,8 +126,7 @@
 
 		<h:form id="form2">
 			<p:panel header="LISTA DE REGISTROS">
-				<p:dataTable value="#{controllerProducto.lista}" var="p"
-					id="tabla1">
+				<p:dataTable value="#{controllerProducto.lista}" var="p" id="tabla1">
 					<h:panelGroup>
 						<p:selectOneMenu value="#{p.idproducto}">
 							<f:selectItem itemLabel="Seleccione..." itemValue=""
@@ -110,7 +136,7 @@
 								listener="#{controllerProducto.agregarProducto()}"></p:ajax>
 						</p:selectOneMenu>
 					</h:panelGroup>
-					
+
 					<p:column headerText="Bodega">
 						<h:outputText value="#{p.tabInvBodega.nombrebodega}" />
 					</p:column>
@@ -123,7 +149,7 @@
 					<p:column headerText="Descrición">
 						<h:outputText value="#{p.descripcionproducto}" />
 					</p:column>
-					<p:column headerText="Valor Compra" >
+					<p:column headerText="Valor Compra">
 						<h:outputText value="#{p.valorcompra}" />
 					</p:column>
 					<p:column headerText="Valor Venta">
@@ -171,5 +197,5 @@
 				onclick="PF('modal').hide();$('#form4').trigger('reset');"></p:commandButton>
 		</h:form>
 	</p:dialog>
-</body>
+</h:body>
 </html>
