Revisión y correccion del 2 de febrero

--- a/appRestauranteWeb/WebContent/bodeguero/inventario/facturacompra.xhtml
+++ b/appRestauranteWeb/WebContent/bodeguero/inventario/facturacompra.xhtml
@@ -50,6 +50,17 @@
 	<br />
 	<br />
 	<p:panel id="panel1">
+	<h:form id="form6">
+			<p:panel header="Reporte">
+				<p:panelGrid columns="2">
+					<h:outputText value="idFactura:" />
+					<p:inputText value="#{controllerFacturaCompra.idfacturacompra}" />
+				</p:panelGrid>
+				<p:commandButton value="Agregar" icon="ui-icon-disk"  ajax="false"				
+					actionListener="#{controllerFacturaCompra.actionReporte()}">
+				</p:commandButton>
+			</p:panel>
+		</h:form>
 		<h:form id="form2">
 			<p:panel header="Datos de la factura de compra">
 				<p:commandButton
