--- a/appRestauranteWeb/WebContent/admin/puntodeventa/facturaventa.xhtml
+++ b/appRestauranteWeb/WebContent/admin/puntodeventa/facturaventa.xhtml
@@ -31,14 +31,15 @@
 	<p:separator />
 	<div align="center">
 		<br />
-		<h:panelGrid columns="3">
+		<h:panelGrid columns="4">
 			<p:splitButton value="Inventario">
 				<p:menuitem value="Bodega" url="../inventario/bodega.xhtml" />
 				<p:menuitem value="Categorías de producto"
 					url="../inventario/categoriaproducto.xhtml" />
-					<p:menuitem value="Productos" url="../inventario/producto.xhtml" />
+				<p:menuitem value="Productos" url="../inventario/producto.xhtml" />
 				<p:menuitem value="Proveedores" url="../inventario/proveedor.xhtml" />
-				<p:menuitem value="Factura de Compra" url="../inventario/facturacompra.xhtml" />
+				<p:menuitem value="Factura de Compra"
+					url="../inventario/facturacompra.xhtml" />
 			</p:splitButton>
 			<p:splitButton value="Punto de Venta">
 				<p:menuitem value="Clientes" url="cliente.xhtml" />
@@ -46,9 +47,14 @@
 				<p:menuitem value="Pedidos" url="pedido.xhtml" />
 				<p:menuitem value="Platos" url="plato.xhtml" />
 			</p:splitButton>
-			<p:splitButton value="Caja diaria">
+			<p:splitButton value="Caja">
 				<p:menuitem value="Tipo de Transacciones"
 					url="../cajadiaria/tipotransaccion.xhtml" />
+					<p:menuitem value="Caja Diaria"
+					url="../cajadiaria/cajadiaria.xhtml" />
+			</p:splitButton>
+			<p:splitButton value="Administración">
+				<p:menuitem value="Usuarios" url="../usuarios.xhtml"></p:menuitem>
 			</p:splitButton>
 		</h:panelGrid>
 	</div>
@@ -67,7 +73,6 @@
 		<h:form id="form2">
 			<p:panel header="Datos de la factura">
 				<p:commandButton
-					
 					action="#{controllerFacturaVenta.crearNuevaFactura()}"
 					value="Crear nueva factura" update="form2 :form3" />
 				<p:panelGrid columns="2">
@@ -113,7 +118,7 @@
 			<p:panel header="Detalle de productos">
 				<p:panelGrid columns="5" border="1">
 					<h:outputText value="Plato:" />
-					<h:selectOneMenu value="#{controllerFacturaVenta.idplato}">
+					<h:selectOneMenu value="#{controllerFacturaVenta.idproducto}">
 						<f:selectItem itemLabel="Seleccione un plato..." itemValue="-1" />
 						<f:selectItems value="#{controllerFacturaVenta.listaPlatoSI}" />
 						<p:ajax update="mensajes2"></p:ajax>
@@ -142,13 +147,13 @@
 						<f:facet name="header">
 					PRODUCTO
 				</f:facet>
-						<h:outputText value="#{d.tabVtsPlato.nombreplato}" />
+						<h:outputText value="#{d.tabInvProducto.nombreproducto}" />
 					</p:column>
 					<p:column>
 						<f:facet name="header">
 					DESCRIPCION
 				</f:facet>
-						<h:outputText value="#{d.tabVtsPlato.descripccionplato}" />
+						<h:outputText value="#{d.tabInvProducto.descripcionproducto}" />
 					</p:column>
 					<p:column style="width:100px">
 						<f:facet name="header">
