--- a/appRestauranteWeb/WebContent/admin/puntodeventa/plato.xhtml
+++ b/appRestauranteWeb/WebContent/admin/puntodeventa/plato.xhtml
@@ -30,7 +30,7 @@
 	<p:separator />
 	<div align="center">
 		<br />
-		<h:panelGrid columns="3">
+		<h:panelGrid columns="4">
 			<p:splitButton value="Inventario">
 				<p:menuitem value="Bodega" url="../inventario/bodega.xhtml" />
 				<p:menuitem value="Categorías de producto"
@@ -41,15 +41,19 @@
 					url="../inventario/facturacompra.xhtml" />
 			</p:splitButton>
 			<p:splitButton value="Punto de Venta">
-				<p:menuitem value="Clientes" url="../puntodeventa/cliente.xhtml" />
-				<p:menuitem value="Facturas de Venta"
-					url="../puntodeventa/facturaventa.xhtml" />
-				<p:menuitem value="Pedidos" url="../puntodeventa/pedido.xhtml" />
-				<p:menuitem value="Platos" url="../puntodeventa/plato.xhtml" />
+				<p:menuitem value="Clientes" url="cliente.xhtml" />
+				<p:menuitem value="Facturas de Venta" url="facturaventa.xhtml" />
+				<p:menuitem value="Pedidos" url="pedido.xhtml" />
+				<p:menuitem value="Platos" url="plato.xhtml" />
 			</p:splitButton>
-			<p:splitButton value="Caja diaria">
+			<p:splitButton value="Caja">
 				<p:menuitem value="Tipo de Transacciones"
 					url="../cajadiaria/tipotransaccion.xhtml" />
+					<p:menuitem value="Caja Diaria"
+					url="../cajadiaria/cajadiaria.xhtml" />
+			</p:splitButton>
+			<p:splitButton value="Administración">
+				<p:menuitem value="Usuarios" url="../usuarios.xhtml"></p:menuitem>
 			</p:splitButton>
 		</h:panelGrid>
 	</div>
