--- a/appRestauranteWeb/WebContent/admin/cajadiaria/tipotransaccion.xhtml
+++ b/appRestauranteWeb/WebContent/admin/cajadiaria/tipotransaccion.xhtml
@@ -31,12 +31,12 @@
 	<p:separator />
 	<div align="center">
 		<br />
-		<h:panelGrid columns="3">
+		<h:panelGrid columns="4">
 			<p:splitButton value="Inventario">
 				<p:menuitem value="Bodega" url="../inventario/bodega.xhtml" />
 				<p:menuitem value="Categorías de producto"
 					url="../inventario/categoriaproducto.xhtml" />
-					<p:menuitem value="Productos" url="../inventario/producto.xhtml" />
+				<p:menuitem value="Productos" url="../inventario/producto.xhtml" />
 				<p:menuitem value="Proveedores" url="../inventario/proveedor.xhtml" />
 				<p:menuitem value="Factura de Compra" url="../inventario/facturacompra.xhtml" />
 			</p:splitButton>
@@ -47,9 +47,14 @@
 				<p:menuitem value="Pedidos" url="../puntodeventa/pedido.xhtml" />
 				<p:menuitem value="Platos" url="../puntodeventa/plato.xhtml" />
 			</p:splitButton>
-			<p:splitButton value="Caja diaria">
+			<p:splitButton value="Caja">
 				<p:menuitem value="Tipo de Transacciones"
 					url="tipotransaccion.xhtml" />
+					<p:menuitem value="Caja Diaria"
+					url="cajadiaria.xhtml" />
+			</p:splitButton>
+			<p:splitButton value="Administración">
+				<p:menuitem value="Usuarios" url="../usuarios.xhtml"></p:menuitem>
 			</p:splitButton>
 		</h:panelGrid>
 	</div>
