--- a/appRestauranteWeb/WebContent/admin/puntodeventa/pedido.xhtml
+++ b/appRestauranteWeb/WebContent/admin/puntodeventa/pedido.xhtml
@@ -28,25 +28,29 @@
 	<p:separator />
 	<div align="center">
 		<br />
-		<h:panelGrid columns="3">
+		<h:panelGrid columns="4">
 			<p:splitButton value="Inventario">
 				<p:menuitem value="Bodega" url="../inventario/bodega.xhtml" />
 				<p:menuitem value="Categorías de producto"
 					url="../inventario/categoriaproducto.xhtml" />
-					<p:menuitem value="Productos" url="../inventario/producto.xhtml" />
+				<p:menuitem value="Productos" url="../inventario/producto.xhtml" />
 				<p:menuitem value="Proveedores" url="../inventario/proveedor.xhtml" />
-				<p:menuitem value="Factura de Compra" url="../inventario/facturacompra.xhtml" />
+				<p:menuitem value="Factura de Compra"
+					url="../inventario/facturacompra.xhtml" />
 			</p:splitButton>
 			<p:splitButton value="Punto de Venta">
-				<p:menuitem value="Clientes" url="../puntodeventa/cliente.xhtml" />
-				<p:menuitem value="Facturas de Venta"
-					url="../puntodeventa/facturaventa.xhtml" />
-				<p:menuitem value="Pedidos" url="../puntodeventa/pedido.xhtml" />
-				<p:menuitem value="Platos" url="../puntodeventa/plato.xhtml" />
+				<p:menuitem value="Clientes" url="cliente.xhtml" />
+				<p:menuitem value="Facturas de Venta" url="facturaventa.xhtml" />
+				<p:menuitem value="Pedidos" url="pedido.xhtml" />
+				<p:menuitem value="Platos" url="plato.xhtml" />
 			</p:splitButton>
-			<p:splitButton value="Caja diaria">
+			<p:splitButton value="Caja">
 				<p:menuitem value="Tipo de Transacciones"
 					url="../cajadiaria/tipotransaccion.xhtml" />
+				<p:menuitem value="Caja Diaria" url="../cajadiaria/cajadiaria.xhtml" />
+			</p:splitButton>
+			<p:splitButton value="Administración">
+				<p:menuitem value="Usuarios" url="../usuarios.xhtml"></p:menuitem>
 			</p:splitButton>
 		</h:panelGrid>
 	</div>
@@ -93,7 +97,7 @@
 			<p:panel header="Detalle de productos">
 				<p:panelGrid columns="5" border="1">
 					<h:outputText value="Plato:" />
-					<h:selectOneMenu value="#{controllerPedido.idplato}">
+					<h:selectOneMenu value="#{controllerPedido.idproducto}">
 						<f:selectItem itemLabel="Seleccione un plato..." itemValue="-1" />
 						<f:selectItems value="#{controllerPedido.listaPlatoSI}" />
 						<p:ajax update="mensajes2"></p:ajax>
@@ -122,13 +126,13 @@
 						<f:facet name="header">
 					PRODUCTO
 				</f:facet>
-						<h:outputText value="#{d.tabVtsPlato.nombreplato}" />
+						<h:outputText value="#{d.tabInvProducto.nombreproducto}" />
 					</p:column>
 					<p:column>
 						<f:facet name="header">
 					DESCRIPCION
 				</f:facet>
-						<h:outputText value="#{d.tabVtsPlato.descripccionplato}" />
+						<h:outputText value="#{d.tabInvProducto.descripcionproducto}" />
 					</p:column>
 					<p:column style="width:100px">
 						<f:facet name="header">
